--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-test
+
+**Yarmico**
+
+Picosystem game
+
+Turn speakers down!
+
+[https://gwald.github.io/yarmico/](https://gwald.github.io/yarmico)
