--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <BR>
     <HR>
       <BR>
-    <B>Yarmico</B>
-<br>
-A Net Yaroze & Picosystem games.
+    <B>Yarmico = Net Yaroze & Picosystem
 <br>
 Turn speakers down!
 <br>
+      </B>
     <a href="https://gwald.github.io/yarmico">https://gwald.github.io/yarmico</a>
-    
+    <BR>
     Movement controls: s = left  f = right or arrow keys<BR>
 Shoot controls: j = left i = up k = down l = right<BR>
     <BR>
