--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ Shoot controls: j = left i = up k = down l = right<BR>
       
     <HR>
       <BR>
-    
+     <BR>
+        <BR> <BR> <BR> <BR> <BR> <BR> <BR>
+        <A HREF="https://web.archive.org/web/19990225000003/http://www.ping.be/fredz/notepad.html" target="_blank">
+<IMG SRC="notepad.gif" ALT="Made With Notepad"
+BORDER=0 WIDTH=88 HEIGHT=31></A>
   </body>
 </html>
