--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <body>
-    
+    <BR>
+<A HREF="https://web.archive.org/web/19990225000003/http://www.ping.be/fredz/notepad.html" target="_blank">
+<IMG SRC="notepad.gif" ALT="Made With Notepad"</A>
     <BR>
     <HR>
       <BR>
@@ -26,9 +28,6 @@ Shoot controls: j = left i = up k = down l = right<BR>
     <HR>
       <BR>
      <BR>
-        <BR> <BR> <BR> <BR> <BR> <BR> <BR>
-        <A HREF="https://web.archive.org/web/19990225000003/http://www.ping.be/fredz/notepad.html" target="_blank">
-<IMG SRC="notepad.gif" ALT="Made With Notepad"
-BORDER=0 WIDTH=88 HEIGHT=31></A>
+        <BR> 
   </body>
 </html>
