--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <BR>
-<A HREF="https://web.archive.org/web/19990225000003/http://www.ping.be/fredz/notepad.html" target="_blank"><IMG SRC="notepad.gif" ALT="Made With Notepad"</A> 
+<A HREF="https://web.archive.org/web/19990225000003/http://www.ping.be/fredz/notepad.html" target="_blank"><IMG SRC="notepad.gif" ALT="Made With Notepad"></A> 
   <H1>gwald</H1>
     <BR><BR>
       <HR>
