--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Shoot controls: j = left i = up k = down l = right<BR>
         <H2>Net Yaroze & Picosystem = Yarmico2     </H2>
         
         <BR>
-           <a href="https://github.com/gwald/yarmico2">https://github.com/gwald/yarmico</a>
+           <a href="https://github.com/gwald/yarmico2">https://github.com/gwald/yarmico2</a>
       <BR>   <BR>
        <a href="https://gwald.github.io/yarmico2">https://gwald.github.io/yarmico2 !Turn speakers down! no vsync :/</a>
     
